--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   "dependencies": {
     "del": "^2.2.2",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
+    "gulp-babel": "^7.0.0",
     "gulp-nodemon": "^2.1.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "object-path": "^0.11.2"
+    "gulp-sourcemaps": "^2.6.0",
+    "object-path": "^0.11.0"
   },
   "devDependencies": {
     "app-root-path": "^1.0.0",
@@ -32,18 +32,12 @@
     "babel-eslint": "^6.1.2",
     "babel-plugin-transform-class-properties": "^6.11.5",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-2": "^6.13.0",
-    "body-parser": "^1.15.0",
     "chai": "^3.5.0",
     "cross-env": "^3.2.4",
     "eslint": "^3.17.0",
     "express": "^4.13.4",
-    "fs-extra": "^0.28.0",
-    "json-pointer": "^0.5.0",
-    "mocha": "^3.0.2",
-    "multer": "^1.1.0",
-    "raw-body": "^2.1.7"
+    "mocha": "^3.0.2"
   }
 }
