--- a/server/.babelrc
+++ b/server/.babelrc
@@ -1,14 +1,25 @@
 {
-  "presets": ["es2015"],
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": { 
+          "node": "8"
+        },
+        "forceAllTransforms": true
+      }
+    ],
+    "@babel/typescript",
+  ],
   "plugins": [
-    "transform-decorators-legacy",
-    "transform-class-properties",
-    "transform-object-rest-spread"
+    "@babel/proposal-class-properties",
+    "@babel/proposal-object-rest-spread"
   ],
   "env": {
     "development": {
       "plugins": [
         ["module-resolver", {
+          "extensions": [".js", ".ts"],
           "alias": {
             "~": "./server",
             "azcommon": "./server/azcommon",
@@ -20,6 +31,7 @@
     "production": {
       "plugins": [
         ["module-resolver", {
+          "extensions": [".js", ".ts"],
           "alias": {
             "~": "./server",
             "azcommon": "./server/azcommon",
